# matsuzawa-20260214

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-0-gpt4o-mini-gsm8k.yaml  comparative-0-gpt4o-mini-strategyqa.yaml  proposed-gpt4o-mini-gsm8k.yaml  proposed-gpt4o-mini-strategyqa.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
